tests/dataset/tpc-ds/compiler/java/q57.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq572342309849/001/Q57.java:278: error: cannot find symbol
        res5.add(x.price);
                  ^
  symbol:   variable price
  location: variable x of type CsIDCc
1 error
